--- a/sass/main.scss
+++ b/sass/main.scss
@@ -439,7 +439,7 @@ textarea {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: url('../images/hero.jpg') no-repeat center center/cover;
+		background: url('../images/hero-lg.jpg') no-repeat center center/cover;
 	}
 
 	.home__card {
