--- a/sass/main.scss
+++ b/sass/main.scss
@@ -439,7 +439,9 @@ textarea {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background: url('../images/hero-lg.jpg') no-repeat center center/cover;
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
 	}
 
 	.home__card {
@@ -448,10 +450,30 @@ textarea {
 		left: 50%;
 		transform: translate(-50%,-50%);
 		max-width: calc(100vw - 4rem);
+
+		&-heading {
+			margin-bottom: 1rem;
+		}
+	}
+}
+
+@media screen and (min-width: 781px) {
+	#hero {
+		background-image: url('../images/hero-lg.jpg');
+	}
+}
+
+@media screen and (max-width: 780px) {
+	#hero {
+		background-image: url('../images/hero-md.webp');
 	}
 }
 
 @media screen and (max-width: 360px) {
+	#hero {
+		background-image: url('../images/hero-sm.webp');
+	}
+
 	.home__card {
 		padding: 1.5rem 2.5rem;
 	}
@@ -466,12 +488,6 @@ textarea {
 // About
 
 #about {
-	clip-path: polygon(0 0, 100% 0, 100% 92%, 0 108%);
-
-	.wrapper {
-		//flex-direction: row-reverse;
-	}
-	
 	.card {
 		background-color: #fafafa;
 	}
@@ -510,7 +526,7 @@ textarea {
 
 	&__article {
 		padding: .5rem .75rem;
-		margin: 1.5rem 0;
+		margin: 1.5rem 0 0;
 
 		&-header {
 			margin-bottom: .5rem;
@@ -543,7 +559,7 @@ textarea {
 
 		&-name {
 			display: inline-block;
-			margin-right: auto;
+			margin: auto;
 		}
 
 		&-meter {
@@ -569,7 +585,6 @@ textarea {
 			    background-color: #f0d600;
 			    box-shadow: -1px -2px 3px rgba(0,0,0,0.2) inset;
 			}
-
 
 			&::-moz-meter-bar {
 			    background: none;
@@ -926,5 +941,19 @@ textarea {
 
 	&__footprint {
 		display: flex;
+		align-items: center;
+		gap: .5rem;
+	}
+}
+
+@media screen and (max-width: 280px) {
+	.footer {
+		.social {
+			margin: 0 .75rem;
+		}
+
+		&__footprint {
+			flex-direction: column;
+		}
 	}
 }
